# FruitSU

./: .gitignore  .pre-commit-config.yaml  README.md  debugme.py  pyproject.toml  tox.ini  xarfstest.py
doc/010/: chunklist.bt  xar.bt
src/fruitsu/: __init__.py  dmg.py  fs.py  fstree.py  hfs.py  io.py  io_ext.py  xar.py
src/fruitsu/tools/: hfs.py
tests/fruitsu/: etc.xar  hello-bz2.xar  hello-full.img  hello-gz.xar  hello-hfs-part.img  hello-nocomp.xar  hello-std.xar  hello.dmg  hello.xar  test_dmg.py  test_fs.py  test_hfs.py  test_io.py  test_xar.py
tests/fruitsu/hello_dmg_rootfs/: root.txt
tests/fruitsu/hello_dmg_rootfs/goodbye/: fornow.txt
tests/fruitsu/hello_dmg_rootfs/hola/: mundo.txt
tests/fruitsu/hello_dmg_rootfs/whats/the/frequency/: kenneth-you-cant-run.txt  kenneth.txt
