[tool.poetry]
name = "fruitsu"
version = "0.1.0"
description = "FruitSU - Tools for Apple Software Updates"
authors = ["Jevin Sweval <jevinsweval@gmail.com>"]

[tool.poetry.scripts]
fruitsu-hfs = 'fruitsu.tools.hfs:main'

[tool.poe.tasks]
test = "pytest"
test-v = "pytest -vvvv"
test-vv = "pytest -vvvv --capture=tee-sys"

[tool.pytest.ini_options]
addopts = "--import-mode=append"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.9"
construct = "^2.10.67"
rich = "^11.2.0"
pretty-errors = "^1.2.25"
attrs = "^21.4.0"
fs = "^2.4.15"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
poethepoet = "^0.12.3"
pytest-clarity = "^1.0.1"
six = "^1.16.0"
pytest-pycharm = "^0.7.0"
pytest-randomly = "^3.11.0"
pytest-cov = "^3.0.0"
mypy = "^0.931"
hypothesis = "^6.36.1"
icontract = "^2.6.0"
icontract-hypothesis = "^1.1.7"
deal = "^4.19.1"
ipython = "*"

[build-system]
requires = ["poetry-core @ git+https://github.com/jevinskie/poetry-core@jev/main"]
build-backend = "poetry.core.masonry.api"
