[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core @ git+https://github.com/jevinskie/poetry-core@jev/main"]

[tool.poe.tasks]
ipy = "ipython"
test = "pytest"
test-v = "pytest -vvvv"
test-vv = "pytest -vvvv --capture=tee-sys"

[tool.poetry]
authors = ["Jevin Sweval <jevinsweval@gmail.com>"]
description = "FruitSU - Tools for Apple Software Updates"
name = "fruitsu"
version = "0.1.0"

[tool.poetry.dependencies]
anytree = "^2.8.0"
attrs = "^21.4.0"
construct = "^2.10.67"
fs = "^2.4.15"
fusefs = "^0.0.2"
pretty-errors = "^1.2.25"
python = "^3.9"
requests = "^2.27.1"
rich = "^11.2.0"
typing-extensions = "^4.1.0"
untangle = "^1.1.1"
wrapt = "^1.13.3"

[tool.poetry.group.dev.dependencies]
deal = "^4.19.1"
hypothesis = "^6.36.1"
icontract = "^2.6.0"
icontract-hypothesis = "^1.1.7"
ipython = "^8.0.1"
mypy = "^0.931"
poethepoet = "^0.12.3"
pytest = "^7.0.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-pycharm = "^0.7.0"
pytest-randomly = "^3.11.0"
six = "^1.16.0"

[tool.poetry.plugins."fs.opener"]
"xar" = "fruitsu.xar:XARFSOpener"

[tool.poetry.scripts]
fruitsu-hfs = 'fruitsu.tools.hfs:main'

[tool.pytest.ini_options]
addopts = "--import-mode=append"
testpaths = [
  "tests"
]

[tool.ruff.lint]
extend-select = ["I"]
