[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=69.0.3",
  "setuptools-scm>=8.0.4"
]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9"
]
dependencies = [
  "anytree>=2.8",
  "attrs>=21.4",
  "construct>=2.10.67",
  "fs>=2.4.15",
  "fusefs>=0.0.2",
  "packaging>=23.2",
  "path>=16.9",
  "pretty-errors>=1.2.25",
  "requests>=2.27.1",
  "rich>=11.2",
  "typing-extensions>=4.1",
  "untangle>=1.1.1",
  "wrapt>=1.13.3"
]
description = "FruitSU - Tools for Apple Software Updates"
dynamic = [
  "version"
]
keywords = [
  "apfs",
  "apple",
  "dmg",
  "hfs",
  "hfs+",
  "hfsplus",
  "ios",
  "ipsw",
  "macos",
  "xar"
]
license = {text = "BSD-2-Clause"}
name = "fruitsu"
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.9"

[project.entry-points."fs.opener"]
xar = "fruitsu.xar:XARFSOpener"

[project.optional-dependencies]
dev = [
  "deal>=4.19.1",
  "hypothesis>=6.36.1",
  "icontract>=2.6",
  "icontract-hypothesis>=1.1.7",
  "ipython>=8.0.1",
  "mypy>=0.931",
  "poethepoet>=0.12.3",
  "pytest>=7.0.1",
  "pytest-sugar>=0.9.7",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=3",
  "pytest-pycharm>=0.7",
  "pytest-randomly>=3.11",
  "six>=1.16",
  "tox>=4.12.1"
]

[project.scripts]
fruitsu-dmg-mod = "fruitsu.dmg:main"
fruitsu-hfs = "fruitsu.tools.hfs:main"
fruitsu-hfs-mod = "fruitsu.hfs:main"
fruitsu-xar-mod = "fruitsu.xar:main"

[project.urls]
repository = "https://github.com/jevinskie/FruitSU"

[tool.poe.tasks]
ipy = "ipython"
test = "pytest"
test-v = "pytest -vvvv"
test-vv = "pytest -vvvv --capture=tee-sys"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
  "tests"
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "fruitsu._version.__version__"}

[tool.setuptools_scm]
version_file = "src/fruitsu/_version.py"
